syntax = "proto3";

option java_package = "org.first";

// Services
// Landing page service
service landingPage{
  rpc ShowLanding(LandingRequest) returns (LandingResponse){}
}

// Messages
message LandingRequest{
  string address = 1;
  string msg = 2;
}

message LandingResponse{
  string responseMsg = 1;
  int32 responseCode = 2;
}
